# trustm

./: Cargo.toml  README.md  hello.txt  mecha_trustzone_ctrl_0.1.0.bb
src/: errors.rs  lib.rs  main.rs  trust_ctrl.rs
