[package]
name = "mecha_trustzone_ctrl"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/trustm.git"
homepage = "https://github.com/Dhruvesh08/trustm.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1"